# liblrs

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: publish_crates.io.yml  publish_npm.yaml  publish_pypi.yaml  tests.yml
python/: Cargo.toml  README.md  liblrs_python.pyi  pyproject.toml
python/src/: lib.rs
src/: builder.rs  curves.rs  geometry_from_osm.rs  lib.rs  lrm_scale.rs  lrs.rs  lrs_ext.rs  osm_helpers.rs
wasm/: Cargo.toml  package-lock.json  package.json  webpack.config.js
wasm/html_demo/: index.html  index.js
wasm/src/: lib.rs
