[package]
name = "liblrs-wasm"
version = "0.4.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
liblrs = { path = ".." }
geo-types = "*"
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.1"

[target.wasm32-unknown-unknown.dependencies]
# See also the configuration in `.cargo/config.toml`
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.3", features = ["wasm_js"] }
